Fix overflow in media modal (#2927)

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_main-layout.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_main-layout.scss
@@ -44,11 +44,11 @@
     }
 }
 
-.modal-content #mediaApp {
+.modal-content .modal-body #mediaApp {
     position: static;
     margin: 0px -15px 0px -15px;
     margin-top: 0;
-    height: 50vh;
+    height: 100%;
 }
 
 .left-sidebar-compact #mediaApp {
